# bibgone_telegram_bot

./: main.py  pyproject.toml
chestii_discord_part/: formulas.py  fun.py  gameinfo.py  guilds.py  hunt.py  jackpo2.py  jail.py  mechanics.py  resources.py  runes.py  sheetupdate.py  snowball.py
src/constants/: shared_constants.py
src/locale/ru/: elixir_sheet_locale.py
src/models/: common_models.py  elixir_sheet_models.py
src/modules/: damage_module.py  damage_to_days_module.py  elixir_sheet_module.py  elixit_sheet_module.py  spots_module.py
src/routers/: damage_router.py  damage_to_days_router.py  elixir_sheet_router.py  help_router.py  spots_router.py
src/utils/: answer_constructor.py  csv_helper.py
