[tool.poetry]
name = "bibigone"
version = "0.1.0"
description = ""
authors = ["logunov.a <logunov.a@ati.su>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.12.0"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
